feat: WLCMS package scaffolding complete
- Laravel package structure with Westlinks\Wlcms namespace
- CMS v2 database schema with 5 new tables
- Core models: ContentItem, MediaAsset, MediaFolder, ContentRevision
- Installation system with wlcms:install command
- Migration tools with wlcms:migrate-content command
- PHP 8.4 + Laravel 12 compatibility

Sprint 1 (Package Scaffolding) - COMPLETE ✅

--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -9,12 +9,13 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.4",
         "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.7",
-        "spatie/laravel-permission": "^6.24"
+        "spatie/laravel-permission": "^6.24",
+        "westlinks/wlcms": "dev-main"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
@@ -35,6 +36,12 @@
             "Database\\Seeders\\": "database/seeders/"
         }
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./packages/westlinks/wlcms"
+        }
+    ],
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
