--- a/public_html/package.json
+++ b/public_html/package.json
@@ -12,7 +12,13 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
-        "vite": "^7.0.7"
+        "vite": "^7.0.7",
+        "@tiptap/core": "^2.0.0",
+        "@tiptap/pm": "^2.0.0",
+        "@tiptap/starter-kit": "^2.0.0",
+        "@tiptap/extension-image": "^2.0.0",
+        "@tiptap/extension-link": "^2.0.0",
+        "wlcms": "^2.0.0"
     },
     "dependencies": {
         "@tailwindcss/forms": "^0.5.11",
