--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,24 @@
-backups-nongit/
-/backups-nongit
-/node_modules
-/public/hot
-/public/storage
-/public/css
-public/css
-/public/js
-public/js
-/storage/*.key
-/vendor
-/.env
+*.log
+.DS_Store
 .env
 .env.backup
-.env.myd22prod
-.env_myd22
-.env.sfvaac
+.env.production
+.phpactor.json
 .phpunit.result.cache
-docker-compose.override.yml
+/.fleet
+/.idea
+/.nova
+/.phpunit.cache
+/.vscode
+/.zed
+/auth.json
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/storage/pail
+/vendor
 Homestead.json
 Homestead.yaml
-npm-debug.log
-yarn-error.log
-/.idea
-/.vscode
-.editorconfig
-.env.example
-.gemini
-.gitattributes
-.styleci.yml
-public_html/public/css/app.css
-
-# LaTeX intermediate files (keep PDFs for web serving)
-*.aux
-*.log
-*.out
-*.fdb_latexmk
-*.fls
-*.synctex.gz
-*.toc
-*.lof
-*.lot
-*.idx
-*.ind
-*.bbl
-*.blg
-*.bcf
-*.run.xml
-.env.*
+Thumbs.db
