--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^8.4",
-        "laravel/framework": "^12.0",
+        "laravel/framework": "^11.0|^12.0",
         "intervention/image-laravel": "^1.0",
         "spatie/laravel-permission": "^6.0"
     },
