refactor: Modern Laravel 11-12 architecture with ES6+ modular components
BREAKING CHANGE: Asset publishing now uses raw source files instead of pre-built assets

Major Architectural Changes:
• Refactored inline JavaScript to ES6+ modular components (MediaModal, FileUpload)
• Created reusable, testable component classes in resources/js/components/
• Updated Vite configuration for proper package structure (dist/ output, no conflicts)
• Changed asset publishing to raw source files for consumer app building
• Added comprehensive installation documentation with Vite integration steps

Modern Laravel Package Standards:
• ES6+ imports/exports with proper module structure
• Vite build process integration for consuming applications
• Raw asset publishing (not pre-built) following community best practices
• TypeScript-ready component architecture
• Separation of concerns with dedicated component files

Components Created:
• MediaModal class: Full preview, metadata editing, URL copying, CRUD operations
• FileUpload class: Drag & drop, progress tracking, error handling
• Auto-initialization system with global function exports for template compatibility

Installation Changes Required:
• Consumers must republish assets: php artisan vendor:publish --tag=wlcms-assets --force
• Consumers must add WLCMS to their Vite build configuration
• Consumers control their own asset compilation process

Ready for testing with modern architecture

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 node_modules/
 package-lock.json
 # public/build/
+# Ignore build outputs - these should be built by consuming applications
+dist/
+public/build/
+node_modules/
+.DS_Store
+*.log
