Fix pixelated thumbnail quality
- Replace resize() with cover() method for better quality
- Increase JPEG quality from 85% to 90%
- Add proper encoding with toJpeg() method
- Add RegenerateThumbnailsCommand for existing images
- Update config to allow environment quality override
- Add documentation and helper script
- Fixes pixelation issues and improves thumbnail sharpness

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ public/build/
 node_modules/
 .DS_Store
 *.log
+
+# Thumbnail quality test files
+quality-test.php
+quality_tests/
+test-thumbnail.php
+thumbnail-method-test.php
