feat: add bySlug and ofType query scopes to ContentItem model
Add two new query scopes to improve content retrieval flexibility:
- scopeBySlug(): Filter content by URL slug
- scopeOfType(): Filter content by type (page, post, article, etc.)

These scopes enable cleaner, chainable queries like:
ContentItem::bySlug('about')->published()->first()
ContentItem::ofType('page')->published()->ordered()->get()

No database changes required. Fully backward compatible.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
+# Dependencies
 node_modules/
+vendor/
+composer.lock
 package-lock.json
-# public/build/
+
 # Ignore build outputs - these should be built by consuming applications
 dist/
 public/build/
-node_modules/
+
+# OS files
 .DS_Store
+
+# Logs
 *.log
 
 # Thumbnail quality test files
