Restore README.md and update .gitignore to exclude only doc files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+# Documentation files (keep README.md)
+CMS_IMPROVEMENT_PLAN.md
+CMS_IMPROVEMENT_PLAN_BACKUP.md
+INSTALLATION.md
+LAYOUT_INTEGRATION_ISSUE.md
+LEGACY_ARTICLE_INTEGRATION_SPEC.md
+MEDIA_DISCOVERY_SYSTEM_SPEC.md
+MODERN_LAYOUT_GUIDE.md
+NAVIGATION_INTEGRATION.md
+PHASE_2_IMPLEMENTATION_SUMMARY.md
+PROJECT_COMPLETION_TODO.md
+THUMBNAIL_QUALITY_IMPROVEMENTS.md
+UNFINISHED_FEATURES_ANALYSIS.md
+WLCMS_COMPLETE_STATUS.md
+WLCMS_LEGACY_INTEGRATION_GUIDE.md
+WLCMS_SCOPE_REQUIREMENTS.md
+WLCM_INTEGRATION_GUIDE.md
+WLCM_NAVIGATION_REQUIREMENTS.md
+WLCMS_ADD_NAVIGATION_FIELDS.md
+IMPLEMENTATION_STATUS_AND_HANDOFF.md
+ABOUT_WLCMS.md
 # Dependencies
 node_modules/
 vendor/
@@ -19,4 +40,3 @@ quality-test.php
 quality_tests/
 test-thumbnail.php
 thumbnail-method-test.php
-*.md
