--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tiptap/core": "^2.1.13",
+    "@tiptap/extension-link": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13"
   }
 }
