Phase 4: Complete Template System Implementation
- Add Template model and Template Manager service for registering/managing templates
- Add ContentTemplateSettings model for storing template zones data per content item
- Implement TemplateRenderer and ZoneProcessor services for rendering template views
- Create template picker component with visual template selection UI
- Add zone editor with support for rich_text, plain_text, and repeater zone types
- Implement 4 core templates: Full Width, Sidebar Right, Two Column, Landing Page
- Add template field to content items with migration
- Update ContentController to save/load template settings and zones data
- Fix MediaPicker initialization in embedded mode with proper asset sync
- Fix featured image loading in edit form using eager-loaded relationships
- Add client-side validation for required template zones
- Fix Alpine.js features iteration in template picker (object vs array)
- Add TipTap form submission handler to sync editor content
- Improve zone editors with contenteditable for rich text zones
- Add comprehensive template system documentation

Technical improvements:
- Export MediaPicker class to window for manual initialization
- Fix zone data initialization (object vs array) in Alpine components
- Add proper two-way binding for zone content with Alpine.js
- Sync WLCMS vendor assets between package and host app
- Update vite config with proper Laravel plugin integration

Testing completed in embedded mode for high-priority customer project.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ WLCM_NAVIGATION_REQUIREMENTS.md
 WLCMS_ADD_NAVIGATION_FIELDS.md
 IMPLEMENTATION_STATUS_AND_HANDOFF.md
 ABOUT_WLCMS.md
+WLCMS_Template_System_Requirements.md
 # Dependencies
 node_modules/
 vendor/
