--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tiptap/core": "^2.1.13",
     "@tiptap/extension-link": "^2.1.13",
-    "@tiptap/starter-kit": "^2.1.13"
+    "@tiptap/starter-kit": "^2.1.13",
+    "alpinejs": "^3.15.8"
   }
 }
